fixed hover and first level active

--- a/centreon/www/front_src/src/styles/partials/_side-nav.scss
+++ b/centreon/www/front_src/src/styles/partials/_side-nav.scss
@@ -190,6 +190,20 @@ a {
           }
         }
       }
+      .collapsed-item {
+        &.active {
+          .collapsed-level-item-link.active {
+            background: $turquoise-centreon-primary;
+            color: $white-color;
+          }
+        }
+        &:hover {
+          > .collapsed-level-item-link {
+            background: $turquoise-centreon-darken;
+            color: $white-color;
+          }
+        }
+      }
     }
 
     &:nth-child(2) {
@@ -210,6 +224,20 @@ a {
         }
         &:hover {
           .collapsed-level-item-link {
+            background: $lime-centreon-darken;
+            color: $white-color;
+          }
+        }
+      }
+      .collapsed-item {
+        &.active {
+          .collapsed-level-item-link.active {
+            background: $lime-centreon-primary;
+            color: $white-color;
+          }
+        }
+        &:hover {
+          > .collapsed-level-item-link {
             background: $lime-centreon-darken;
             color: $white-color;
           }
@@ -240,6 +268,20 @@ a {
           }
         }
       }
+      .collapsed-item {
+        &.active {
+          .collapsed-level-item-link.active {
+            background: $orange-centreon-primary;
+            color: $white-color;
+          }
+        }
+        &:hover {
+          > .collapsed-level-item-link {
+            background: $orange-centreon-darken;
+            color: $white-color;
+          }
+        }
+      }
     }
 
     &:nth-child(4) {
@@ -265,6 +307,20 @@ a {
           }
         }
       }
+      .collapsed-item {
+        &.active {
+          .collapsed-level-item-link.active {
+            background: $lightblue-centreon-primary;
+            color: $white-color;
+          }
+        }
+        &:hover {
+          > .collapsed-level-item-link {
+            background: $lightblue-centreon-darken;
+            color: $white-color;
+          }
+        }
+      }
     }
 
     &:nth-child(5) {
@@ -285,6 +341,20 @@ a {
         }
         &:hover {
           .collapsed-level-item-link {
+            background: $darkblue-centreon-darken;
+            color: $white-color;
+          }
+        }
+      }
+      .collapsed-item {
+        &.active {
+          .collapsed-level-item-link.active {
+            background: $darkblue-centreon-primary;
+            color: $white-color;
+          }
+        }
+        &:hover {
+           > .collapsed-level-item-link {
             background: $darkblue-centreon-darken;
             color: $white-color;
           }
