--- a/centreon/www/front_src/src/styles/partials/_side-nav.scss
+++ b/centreon/www/front_src/src/styles/partials/_side-nav.scss
@@ -363,7 +363,7 @@ a {
     }
     &-name {
       font-family: $primary-font-regular;
-      font-size: 0.75rem;
+      font-size: 0.84rem;
       vertical-align: middle;
       position: absolute;
       left: 41px;
@@ -380,9 +380,9 @@ a {
         border-bottom: 1px solid #f7f7f7;
         text-align: left;
         text-decoration: none;
-        font-size: 0.7rem;
+        font-size: 0.8rem;
         color: rgb(36,47,59);
-        font-family: $primary-font-light;
+        font-family: $primary-font-regular;
         padding: 10px 10px 11px 47px;
         display: block;
         letter-spacing: -0.4px;
@@ -391,8 +391,8 @@ a {
     }
     &-title {
       color: $lightblue-centreon-primary;
-      font-family: $primary-font-light;
-      font-size: 0.7rem;
+      font-family: $primary-font-regular;
+      font-size: 0.8rem;
       background-color: $white-color;
       display: block;
       padding: 3px 10px 3px 47px;
@@ -422,7 +422,7 @@ a {
     }
     > .collapsed-level-item-link {
       background: url("./img/icons/aside-menu-arrows.png") no-repeat;
-      background-position: 26px 5px;
+      background-position: 26px 7px;
       background-color: #f7f7f7;
       &.img-none {
         background: none;
