fix(broker): fix wizard broker configuration with one peer retention (#6959)
* fix(broker): fix wizard broker configuration with one peer retention mode

* enh(broker): add poller name in one peer retention configuration name

Refs: #6910 #6978 #6987

* add comments

* fix broker configuration methods

* Remote server add multiple authorized master (#7063)

* fix(remote-server): Update authorizedMaster value using enableRemote
* enh(remote-server): authorize multiple master

* fix syntax error

* improve centcore debug

* fix bam broker configuration on remote server

* test(ut): fix unit tests of remote server

* test(ut): update value of mocked constants

--- a/centreon/www/front_src/src/styles/partials/form/_form.scss
+++ b/centreon/www/front_src/src/styles/partials/form/_form.scss
@@ -46,6 +46,7 @@
     }
   }
   &-error-message {
+    font-size: 12px;
     color: #d0021b;
     display: block;
     text-align: center;
@@ -78,12 +79,12 @@
   }
   &-title {
     font-size: 12px;
-    font-family: $primary-font-medium;
+    font-family: $primary-font-light;
     color: $lightblue-centreon-primary;
   }
   &-text {
-    font-size: 10px;
-    font-family: $primary-font-light;
+    font-size: 12px;
+    font-family: $primary-font-regular;
     color: #242f3a;
     margin: 20px 0;
   }
